--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,10 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
-
+        <activity android:name=".Courses"></activity>
+        <activity android:name=".CourseInstructor" />
+        <activity android:name=".Term" />
         <activity android:name=".MainActivity">
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -22,6 +22,3 @@
     </application>
 
 </manifest>
-
-<!--// android:theme="@style/Theme.SchoolScheduler"-->
-<!--    >-->
